# bililive-danmaku-rs

./: Cargo.toml  README.md
src/: bili.rs  main.rs
