[package]
name = "bililive-danmu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
tracing = "0.1"
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"]}
tokio = { version = "1", features = ["full"] }
url = "2.1.0"
env_logger = "0.9.0"
miniz_oxide = "0.5.1"
serde_json = "1"
futures-channel = "0.3.19"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
regex = { version = "1.1.8", features = ["pattern"] }